Code_Review_Minor_Changes (#3)
* changed package name and added gitignore

* removed unnecessary annotations